# verona

./: hello.mlir  poc.mlir
src/: CMakeLists.txt
src/bytecode/: CMakeLists.txt  bytecode.cc  bytecode.h  generator.cc  generator.h  writer.cc  writer.h
src/compiler/: CMakeLists.txt  analysis.cc  assignssymbols.h
src/compiler/codegen/: builtins.cc  builtins.h  codegen.cc  descriptor.cc  descriptor.h  function.cc  function.h  ir.cc  ir.h  item.cc  item.h  reachability.cc  reachability.h
src/compiler/reachability/: item.cc  item.h  reachability.cc  reachability.h  selector.cc  selector.h
src/compiler/typecheck/: infer.cc
src/datalog/: environment.h  helpers.h  join.h  lattice.h  relation.h  selector.h  type_traits.h
src/ds/: helpers.h  taggedptr.h
src/interpreter/: CMakeLists.txt  bytecode.h  code.h  object.h  options.h  value.h  vm.cc  vm.h
src/mlir/: Query.h  Query2.h  driver.cc  driver.h  foo.cc  old.cc  sparse_tuple.h  verona-mlir.cc
src/mlir/datalog/: Environment.h  Join.h  Lattice.h  Relation.h  Selector.h  helpers.h
src/mlir/dialect/: CMakeLists.txt  Lattice.h  Passes.h  Passes.td  PolymorphicOp.cc  PolymorphicOp.h  RegionChecker.cc  RegionChecker.h  TopologicalFacts.h  TypeSyntax.cc  Typechecker.cc  (+11 more)
src/mlir2/: CMakeLists.txt  generator.h  lower.h  main.cc
src/mlir2/IR/: ArithmeticOps.td  Attributes.cc  Attributes.h  Attributes.td  Base.td  ConcurrencyOps.td  Dialect.cc  Dialect.h  Dialect.td  MemoryOps.td  MiscOps.td  OpSyntax.cc  OpSyntax.h  StructureOps.td
src/stdlib/: builtin.verona
testsuite/: CMakeLists.txt  topological-facts.cmake
(+55 files in other folders)
